src/app/core/statusbar/statusbar.component.css
:host {
    width: 100vw;
    height: 32px;
    background-color: #000;
    color: #fff;
    padding: 4px 5px;
    display: flex;
    flex-direction: row;
    box-sizing: border-box;
}
.app-menu {
    flex: 1;
    line-height: 24px;
    font-weight: 500;
}
.clock {
    line-height: 24px;
    font-weight: 500;
}
.device-menu-tab {
    flex: 1;
    text-align: right;
    padding: 2px 0;
}
.device-menu-tab img {
    height: 20px;
}

/* Device Menu */

.device-menu {
    position: absolute;
    top: 32px;
    right: 0px;
    width: 85%;
    max-width: 330px;
    /*background-color: rgba(0,0,0,.85);*/
    /*border: 24px;*/
    /*-webkit-border-image: url('assets/ui/system-menu-background.png') 33 38 46 39 stretch;*/
    /*border-image: url('assets/ui/system-menu-background.png') 33 38 46 39 stretch;*/
    /*border-style: solid;*/
    /*background: #4C4C4C url(assets/enyo/layout/onyx/images/gradient.png) repeat-x 0 bottom;*/
    /*border-bottom-left-radius: 25px;*/
    /*border-bottom-right-radius: 25px;*/
    transform: translateY(-100vh);
    transition: 400ms ease-in-out;
    z-index: 150;
    max-height: 85vh;
    overflow-y: auto;
    font-weight: 400;

    border-radius: 25px;
    background: rgba(69,69,69,1);
    background: -moz-linear-gradient(top, rgba(69,69,69,1) 0%, rgba(35,35,35,1) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(69,69,69,1)), color-stop(100%, rgba(35,35,35,1)));
    background: -webkit-linear-gradient(top, rgba(69,69,69,1) 0%, rgba(35,35,35,1) 100%);
    background: -o-linear-gradient(top, rgba(69,69,69,1) 0%, rgba(35,35,35,1) 100%);
    background: -ms-linear-gradient(top, rgba(69,69,69,1) 0%, rgba(35,35,35,1) 100%);
    background: linear-gradient(to bottom, rgba(69,69,69,1) 0%, rgba(35,35,35,1) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#454545', endColorstr='#232323', GradientType=0 );
}
.device-menu .content-wrapper {
    margin: 0;
}
.device-menu.open {
    transform: translateY(0px);
}
.device-menu .row,
.device-menu .sub-row {
    padding: 0 5px;
    margin: 0 10px;
    border-bottom: 2px solid rgba(0,0,0,.15);
    font-size: 1.1em;
    color: #eaeaea;
    display: flex;
    align-items: center;
    height: 52px;
}
.device-menu .row > .flex,
.device-menu .sub-row > .flex {
    flex: 1;
}
.device-menu .row.last {
    border: none;
}
.device-menu .sub-row > .label,
.device-menu .row > .label {
    font-weight: 400;
}
.device-menu .row > .onyx-spinner {
    height: 24px;
    width: 24px;
    margin-left: 5px;
}
.device-menu .sub-row > .status,
.device-menu .row > .status {
    font-size: .9em;
    opacity: .6;
}
.device-menu .sub-row > img,
.device-menu .row > img {
    height: 24px;
    margin-left: 10px;
}
.device-menu .sub-row {
    /*margin-left: 15px;*/
    padding-left: 20px;
}

.device-menu .connecting {
    font-size: .7em;
    font-weight: bold;
    opacity: .5;
    line-height: 0px;
}
.device-menu .connected {
    font-weight: bold;
}

.scrim {
    position: absolute;
    top: -150vh;
    left: 0px;
    height: 100%;
    width: 100%;
    background-color: #000;
    transition: opacity 300ms;
    z-index: 100;
    opacity: 0;
}
.scrim.showing {
    top: 32px;
    opacity: .4;
}

/* Onyx overrides */

.onyx-groupbox > .flex-row > img{
  height: 24px;
  margin-left: 10px;
}

